Add TemplateComponent and enhance template-related utilities
Introduced a new `TemplateComponent` class for handling HTML and CSS-based templates, integrating with Vaadin. Refactored various template utility classes, streamlined style tag handling, and improved component creation logic. Updated the project to version 13.1.0 to reflect these changes.